# monstrii_si_lei

./: README.md
monstrii si lei/: CMakeLists.txt  Costuri.cpp  Costuri.csv  Costuri.h  File_Handler.cpp  File_Handler.h  Interfata.h  Meniu.cpp  Meniu.h  Meniu_Generat.csv  Meniu_Generaten.csv  Persoana.cpp  Persoana.h  main.cpp  wednesdayCast.csv
